--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         height: 100%;
       }
       body {
-        background-image: url("img-all/Weihnachten4.jpg");
+        background-image: url("img/Weihnachten4.jpg");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
