--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <img style="float:right;" src="img/ani6.gif" alt="BaumGIF">
       <h1>Weihnachtsbaum schmücken</h1>
       <p>Schmücken Sie den Weihnachtsbaum. Suchen Sie zunächst die Stellen, an denen eine Kugel rankönnte.</p>
+      <small>© Martin Schneider, 25.12.2020</small>
     </div>
     <br>
     <br>
