Add test for plesk-git

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <h1>Weihnachtsbaum schmücken</h1>
       <p>Schmücken Sie den Weihnachtsbaum. Suchen Sie zunächst die Stellen, an denen eine Kugel rankönnte.</p>
       <small>© Martin Schneider, 25.12.2020</small>
+      <p>test</p>
     </div>
     <br>
     <br>
